nginx-with-resource-limits.yaml
apiVersion: v1
kind: Pod
metadata:
   name: nginx
   labels:
     app: myapp
     tier: frontend
spec:
   containers:
   - name: nginx
     image: nginx
     resources:
       requests:
         memory: "1Gi"
         cpu: 1
       limits:
         memory: "2Gi"
         cpu: 2
